added a fast general-purpose 64-bit hash function to common

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,8 +1,9 @@
-set(SRCS	src/config.cpp
-			src/crc.cpp
-			src/log.cpp
-			src/misc_utils.cpp
-			src/timer.cpp
-			src/xml.cpp)
+set(SRCS    src/config.cpp
+            src/crc.cpp
+            src/hash.cpp
+            src/log.cpp
+            src/misc_utils.cpp
+            src/timer.cpp
+            src/xml.cpp)
 
 add_library(common STATIC ${SRCS})
