--- a/src/common/common.vcxproj
+++ b/src/common/common.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="src\config.cpp" />
     <ClCompile Include="src\crc.cpp" />
+    <ClCompile Include="src\hash.cpp" />
     <ClCompile Include="src\log.cpp" />
     <ClCompile Include="src\misc_utils.cpp" />
     <ClCompile Include="src\timer.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\config.h" />
     <ClInclude Include="src\crc.h" />
+    <ClInclude Include="src\hash.h" />
     <ClInclude Include="src\hash_container.h" />
     <ClInclude Include="src\log.h" />
     <ClInclude Include="src\misc_utils.h" />
