added more comprehensive x86 feature support detection to x86_utils

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SRCS    src/config.cpp
             src/log.cpp
             src/misc_utils.cpp
             src/timer.cpp
+            src/x86_utils.cpp
             src/xml.cpp)
 
 add_library(common STATIC ${SRCS})
