added a utils module for utility functions to the video core, moved TGA dump function from texture_decoder to here

--- a/src/video_core/CMakeLists.txt
+++ b/src/video_core/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SRCS
             src/video_core.cpp
             src/texture_decoder.cpp
             src/texture_manager.cpp
+            src/utils.cpp
             src/renderer_gl3/raster_font.cpp
             src/renderer_gl3/renderer_gl3.cpp
             src/renderer_gl3/shader_manager.cpp
