--- a/src/video_core/video_core.vcxproj
+++ b/src/video_core/video_core.vcxproj
@@ -23,13 +23,13 @@
     <ClCompile Include="src\cp_mem.cpp" />
     <ClCompile Include="src\fifo.cpp" />
     <ClCompile Include="src\fifo_player.cpp" />
-    <ClCompile Include="src\renderer_gl3\raster_font.cpp" />
     <ClCompile Include="src\renderer_gl3\renderer_gl3.cpp" />
     <ClCompile Include="src\renderer_gl3\shader_manager.cpp" />
     <ClCompile Include="src\renderer_gl3\texture_interface.cpp" />
     <ClCompile Include="src\renderer_gl3\uniform_manager.cpp" />
     <ClCompile Include="src\texture_decoder.cpp" />
     <ClCompile Include="src\texture_manager.cpp" />
+    <ClCompile Include="src\utils.cpp" />
     <ClCompile Include="src\vertex_loader.cpp" />
     <ClCompile Include="src\vertex_manager.cpp" />
     <ClCompile Include="src\video_core.cpp" />
@@ -42,13 +42,13 @@
     <ClInclude Include="src\fifo_player.h" />
     <ClInclude Include="src\gx_types.h" />
     <ClInclude Include="src\renderer_base.h" />
-    <ClInclude Include="src\renderer_gl3\raster_font.h" />
     <ClInclude Include="src\renderer_gl3\renderer_gl3.h" />
     <ClInclude Include="src\renderer_gl3\shader_manager.h" />
     <ClInclude Include="src\renderer_gl3\texture_interface.h" />
     <ClInclude Include="src\renderer_gl3\uniform_manager.h" />
     <ClInclude Include="src\texture_decoder.h" />
     <ClInclude Include="src\texture_manager.h" />
+    <ClInclude Include="src\utils.h" />
     <ClInclude Include="src\vertex_loader.h" />
     <ClInclude Include="src\vertex_manager.h" />
     <ClInclude Include="src\video_core.h" />
