--- a/src/video_core/video_core.vcxproj.filters
+++ b/src/video_core/video_core.vcxproj.filters
@@ -10,9 +10,6 @@
     <ClCompile Include="src\renderer_gl3\renderer_gl3.cpp">
       <Filter>renderer_gl3</Filter>
     </ClCompile>
-    <ClCompile Include="src\renderer_gl3\raster_font.cpp">
-      <Filter>renderer_gl3</Filter>
-    </ClCompile>
     <ClCompile Include="src\texture_decoder.cpp" />
     <ClCompile Include="src\vertex_manager.cpp" />
     <ClCompile Include="src\fifo_player.cpp" />
@@ -26,6 +23,7 @@
       <Filter>renderer_gl3</Filter>
     </ClCompile>
     <ClCompile Include="src\texture_manager.cpp" />
+    <ClCompile Include="src\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bp_mem.h" />
@@ -42,9 +40,6 @@
     <ClInclude Include="src\renderer_gl3\shader_manager.h">
       <Filter>renderer_gl3</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer_gl3\raster_font.h">
-      <Filter>renderer_gl3</Filter>
-    </ClInclude>
     <ClInclude Include="src\fifo_player.h" />
     <ClInclude Include="src\texture_decoder.h" />
     <ClInclude Include="src\vertex_manager.h" />
@@ -55,6 +50,7 @@
     <ClInclude Include="src\renderer_gl3\texture_interface.h">
       <Filter>renderer_gl3</Filter>
     </ClInclude>
+    <ClInclude Include="src\utils.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="renderer_gl3">
