ported some cross-platform file utility crap and made use of it in various places

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(SRCS    src/config.cpp
             src/crc.cpp
+            src/file_utils.cpp
             src/hash.cpp
             src/log.cpp
             src/misc_utils.cpp
