--- a/src/common/common.vcxproj.filters
+++ b/src/common/common.vcxproj.filters
@@ -9,6 +9,7 @@
     <ClCompile Include="src\misc_utils.cpp" />
     <ClCompile Include="src\hash.cpp" />
     <ClCompile Include="src\x86_utils.cpp" />
+    <ClCompile Include="src\file_utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\crc.h" />
@@ -29,5 +30,6 @@
     <ClInclude Include="src\std_thread.h" />
     <ClInclude Include="src\hash_container.h" />
     <ClInclude Include="src\hash.h" />
+    <ClInclude Include="src\file_utils.h" />
   </ItemGroup>
 </Project>
