Adding basic ucode functionality. Implemented UCode_ROM. Breaks booting process for now, needs Zelda UCode implementation and basic DSPHLE object

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -10,6 +10,8 @@ set(SRCS	src/core.cpp
 			src/dvd/loader.cpp
 			src/dvd/realdvd.cpp
 			src/hle/dsp/mail_manager.cpp
+			src/hle/dsp/ucode.cpp
+			src/hle/dsp/ucode_rom.cpp
 			src/hle/hle_audio.cpp
 			src/hle/hle.cpp
 			src/hle/hle_dsp.cpp
